Request: Option to force `file(COPY` to overwrite despite identical time step
In the file(COPY
documentation here, it is noted that:
Copying preserves input file timestamps, and optimizes out a file if it exists at the destination with the same timestamp.
Can an option be introduced to override this "optimization" and force copying (with overwriting) a file where the timestamps appear to be identical?