file: option ALWAYS for copying

Fixes: #19204