Help/release/dev/file-copy-always.rst
@@ -1,0 +1,5 @@
+file-copy-always
+--------------
+
+* The :command:`file(COPY)` command gained an ``ALWAYS`` option to always copy
+  regardless of timestamp.
